--- a/Sample 1/style.css
+++ b/Sample 1/style.css
@@ -8,7 +8,7 @@
 
 header {
     height: 300px;
-    background-image: url("header-img.png");
+    background-image: url("images/header-img.png");
 }
 
 h1 {
