--- a/Sample 2/style.css
+++ b/Sample 2/style.css
@@ -1,5 +1,67 @@
+@import url('https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,200..800;1,200..800&family=Merriweather:ital,wght@0,700;0,900;1,700;1,900&display=swap');
+
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+}
+
+body {
+    margin: 0 5%;
+    text-align: center;
+}
+
+h1 {
+    font-family: "Merriweather", serif;
+    font-weight: 700;
+    font-style: normal;
+    text-transform: capitalize;
+    padding: 50px 0 30px 0;
+}
+
+p {
+    font-family: "Karla", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-style: normal;
+    padding: 20px;
+}
+
+input, textarea {
+    background-color: #f1f1f1;
+    text-transform: capitalize;
+    border: none;
+    padding: 10px 20px;
+}
+
+form {
+    margin: 10px 3%;
+    display: flex;
+    flex-direction: column;
+}
+
+div {
+    margin: 2% 0;
+    display: flex;
+    justify-content: space-between;
+
+}
+
+input[type="text"], input[type="email"] {
+    width: 49%;
+}
+
+textarea {
+    margin-bottom: 2%;
+    height: 200px;
+}
+
+.btn {
+    background-color: white;
+    color: #000;
+    font-size: 20px;
+    width: 200px;
+    align-self: center;
+    border: 2px solid black;
+    cursor: pointer;
 }
