--- a/Sample 2/style.css
+++ b/Sample 2/style.css
@@ -27,7 +27,8 @@ p {
     padding: 20px;
 }
 
-input, textarea {
+input,
+textarea {
     background-color: #f1f1f1;
     text-transform: capitalize;
     border: none;
@@ -44,10 +45,10 @@ div {
     margin: 2% 0;
     display: flex;
     justify-content: space-between;
-
 }
 
-input[type="text"], input[type="email"] {
+input[type="text"],
+input[type="email"] {
     width: 49%;
 }
 
